Revise functionality for nested JAR extraction